<resources>
    <string name="app_name">Acikt_ru</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Sorry!Nothing to show.</string>
    <string name="academy">Об академии и не только...</string>
    <string name="news_text">Example text about MTUCI</string>
    <string name="toDo">TODO</string>
    <string name="todo_image">TODO</string>
    <string name="title_activity_drawer">НОП АСИКТ</string>
    <string name="title_nav">Acikt</string>
    <string name="Url_Categories">http://a0198994.xsph.ru/components/com_jshopping/files/img_categories/</string>//Категории
    <string name="Url_about_Theme">http://a0198994.xsph.ru/</string> //Подробнее о категории
    <string name="Url_product">http://a0198994.xsph.ru/components/com_jshopping/files/img_products/</string> //Иконка категории
    <string name="documents">Посмотреть метериалы</string>
    <string name="details">Подробнее</string>
    <string-array name="array">
        <item>Для просмотра требуется установленный Adobe Flash Player</item>
    </string-array>
    <string name="module">Параметры Модуля:</string>

    <string name="sub_title_nav">Научнообразовательный портал</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_news">Новости</string>
    <string name="nav_books">Направления Академии</string>
    <string name="nav_manage">Настройки</string>
    <string name="nav_subTitle">Контактная информация</string>
    <string name="nav_subTitle_company">О компании</string>
    <string name="nav_subTitle_contakts">Контакты</string>
    <string name="contakts">Контакты</string>
    <string name="main">Добро пожаловать на научно-просветительский портал «Академия Современных ИнфоКоммуникационных Технологий», созданный по инициативе НО АПОС при поддержке РСПП и Федерального агентства связи." </string>
    <string name="todo">TODO</string>
    <string name="main_screne">Главная</string>
</resources>
